Added ephemeral flag

--- a/data/settings.config
+++ b/data/settings.config
@@ -29,6 +29,7 @@
 # Name & Security token for collector
 collector_name="Name of collector in SumoLogic"
 collector_token_string="YOUR_BASE64_TOKEN_STRING"
+ephemeral=true
 
 #######
 # SumoLogic Sources File
@@ -38,12 +39,3 @@ source_filename="syslog.json"
 SUMO_DIR="/opt/SumoCollector"
 use_web_address_install=true
 web_address="https://collectors.sumologic.com/rest/download/linux/64" #Download Options ( https://help.sumologic.com/03Send-Data/Installed-Collectors/05Reference-Information-for-Collector-Installation/02Download-a-Collector-from-a-Static-URL )"
-
-##########
-#Choose an install type. Local deb package or pull from static url source
-#https://help.sumologic.com/03Send-Data/Installed-Collectors/04Install-a-Collector-on-Linux#Install_using_the_RPM_or_Debian_package
-#https://help.sumologic.com/03Send-Data/Installed-Collectors/04Install-a-Collector-on-Linux#Install_using_the_command_line_installer
-#use_local_file_install=flase
-#local_package_name="sumocollector_19.308-12_amd64.deb"
-#use_web_address_install=true
-#web_address="https://collectors.sumologic.com/rest/download/linux/64" #Download Options ( https://help.sumologic.com/03Send-Data/Installed-Collectors/05Reference-Information-for-Collector-Installation/02Download-a-Collector-from-a-Static-URL )"
