Replaced ephemeral with clobber

--- a/data/settings.config
+++ b/data/settings.config
@@ -29,7 +29,7 @@
 # Name & Security token for collector
 collector_name="Name of collector in SumoLogic"
 collector_token_string="YOUR_BASE64_TOKEN_STRING"
-ephemeral=true
+clobber=true
 
 #######
 # SumoLogic Sources File
